maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:4: error: not found: value Nord
    if (getDirection()==Nord) {
                        ^